--- a/Weather-Monitoring/src/main/resources/application.properties
+++ b/Weather-Monitoring/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Raghav01@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # API Configuration
